--- a/server/views/includes/head.pug
+++ b/server/views/includes/head.pug
@@ -9,7 +9,7 @@ block head
               Home
               span(class="sr-only") (current)
           li(class="nav-item")
-            a(class="nav-link" href="/blog") Blog
+            a(class="nav-link" href="https://huitclub.github.io") Blog
           li(class="nav-item dropdown")
             a(class="nav-link dropdown-toggle", href="/portfolio", id="navbarDropdown", role="button", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false") Portfolio
             div(class="dropdown-menu", aria-labelledby="navbarDropdown")
