--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -9,6 +9,7 @@ html
     link(rel="stylesheet", href="https://fonts.googleapis.com/earlyaccess/nicomoji.css")
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css", integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB", crossorigin="anonymous")
+    link(rel="stylesheet", href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css")
   body.wf-mplus1p
     include includes/head.pug
 
