--- a/server/views/includes/foot.pug
+++ b/server/views/includes/foot.pug
@@ -6,7 +6,7 @@ block foot
       i(id="social-tw", class="fa fa-twitter-square fa-3x social")
     a(href="https://github.com/HUITCLUB")
       i(id="social-gh", class="fa fa-github-square fa-3x social")
-    a(href="https://huitclub.slack.com/")
+    a(href="https://huitgroup.slack.com/")
       i(id="social-sl", class="fa fa-slack fa-3x social")
     br
     span(id="cc-text", class="text-muted") Copyright © 2018-2018 by cfr2ak @github.com. All rights reserved.
