--- a/server/views/includes/head.pug
+++ b/server/views/includes/head.pug
@@ -5,11 +5,11 @@ block head
       div(class="collapse navbar-collapse", id="navbarSupportedContent")
         ul(class="navbar-nav mr-auto")
           li(class="nav-item active")
-            a(class="nav-link", href="/")
-              Home
-              span(class="sr-only") (current)
+            a(class="nav-link", href="/") Home
           li(class="nav-item")
-            a(class="nav-link" href="https://huitclub.github.io") Blog
+            a(class="nav-link" href="https://huitclub.github.io") Github Blog
+          li(class="nav-item")
+            a(class="nav-link" href="/blog") Site Blog
           li(class="nav-item dropdown")
             a(class="nav-link dropdown-toggle", href="/portfolio", id="navbarDropdown", role="button", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false") Portfolio
             div(class="dropdown-menu", aria-labelledby="navbarDropdown")
