--- a/server/public/stylesheets/style.css
+++ b/server/public/stylesheets/style.css
@@ -25,6 +25,11 @@ footer {
   padding-bottom: 3em;
 }
 
+.blog-header {
+  line-height: 1;
+  border-bottom: 1px solid #e5e5e5;
+}
+
 .jumbotron { width: 100%; }
 .display-inline { display: inline; }
 
