--- a/server/views/includes/head.pug
+++ b/server/views/includes/head.pug
@@ -1,23 +1,20 @@
-block head
-  header
-    nav(class="navbar navbar-expand-lg navbar-dark bg-dark")
-      a(class="navbar-brand" href="/") HUIT
-      div(class="collapse navbar-collapse", id="navbarSupportedContent")
-        ul(class="navbar-nav mr-auto")
-          li(class="nav-item active")
-            a(class="nav-link", href="/") Home
-          li(class="nav-item")
-            a(class="nav-link" href="https://huitclub.github.io") Github Blog
-          li(class="nav-item")
-            a(class="nav-link" href="/blog") Site Blog
-          li(class="nav-item dropdown")
-            a(class="nav-link dropdown-toggle", href="/portfolio", id="navbarDropdown", role="button", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false") Portfolio
-            div(class="dropdown-menu", aria-labelledby="navbarDropdown")
-              a(class="dropdown-item", href="/portfolio/yoonken") 尹建
-              div.dropdown-divider
-              a(class="dropdown-item", href="/portfolio/yoonken") 尹建
-              div.dropdown-divider
-              a(class="dropdown-item", href="/portfolio/yoonken") 尹建
-        form(class="form-inline my-2 my-lg-0")
-          input(class="form-control mr-sm-2", type="search", placeholder="Search", aria-label="Search")
-          button(class="btn btn-outline-success my-2 my-sm-0", type="submit") Search
+header
+  nav(class="navbar navbar-expand-md navbar-dark fixed-top bg-dark")
+    a(class="navbar-brand" href="/") HUIT
+    div(class="collapse navbar-collapse", id="navbarSupportedContent")
+      ul(class="navbar-nav mr-auto")
+        li(class="nav-item active")
+          a(class="nav-link", href="/") Home
+        li(class="nav-item")
+          a(class="nav-link" href="https://huitclub.github.io") Github Blog
+        li(class="nav-item")
+          a(class="nav-link" href="/blog") Site Blog
+        li(class="nav-item dropdown")
+          a(class="nav-link dropdown-toggle", href="/portfolio", id="navbarDropdown", role="button", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false") Portfolio
+          div(class="dropdown-menu", aria-labelledby="navbarDropdown")
+            a(class="dropdown-item", href="/portfolio/yoonken") Portfolio Main
+            div.dropdown-divider
+            a(class="dropdown-item", href="/portfolio/yoonken") 尹建
+      form(class="form-inline my-2 my-lg-0")
+        input(class="form-control mr-sm-2", type="search", placeholder="Search", aria-label="Search")
+        button(class="btn btn-outline-success my-2 my-sm-0", type="submit") Search
