--- a/server/views/includes/head.pug
+++ b/server/views/includes/head.pug
@@ -1,20 +1,39 @@
 header
-  nav(class="navbar navbar-expand-md navbar-dark fixed-top bg-dark")
+  div(class="bg-dark collapse", id="navbarHeader")
+    .container
+      .row
+        div(class="col-sm-8 col-md-7 py-4")
+          h4.text-white About
+          p.text-muted words
+        div(class="col-sm-4 offset-md-1 py-4")
+          h4.text-white Contact
+          ul.list-unstyled
+            li
+              a(href="https://twitter.com/huitclub")
+                Follow on Twitter
+                i(id="social-tw", class="fa fa-twitter-square fa-3x social")
+            li
+              a(href="https://github.com/HUITCLUB")
+                Watch what we have done
+                i(id="social-gh", class="fa fa-github-square fa-3x social")
+            li
+              a(href="https://huitgroup.slack.com/")
+                Getting in slack chat
+                i(id="social-sl", class="fa fa-slack fa-3x social")
+  div(class="navbar navbar-expand-md navbar-dark fixed-top bg-dark")
     a(class="navbar-brand" href="/") HUIT
-    div(class="collapse navbar-collapse", id="navbarSupportedContent")
-      ul(class="navbar-nav mr-auto")
-        li(class="nav-item active")
-          a(class="nav-link", href="/") Home
-        li(class="nav-item")
-          a(class="nav-link" href="https://huitclub.github.io") Github Blog
-        li(class="nav-item")
-          a(class="nav-link" href="/blog") Site Blog
-        li(class="nav-item dropdown")
-          a(class="nav-link dropdown-toggle", href="/portfolio", id="navbarDropdown", role="button", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false") Portfolio
-          div(class="dropdown-menu", aria-labelledby="navbarDropdown")
-            a(class="dropdown-item", href="/portfolio/yoonken") Portfolio Main
-            div.dropdown-divider
-            a(class="dropdown-item", href="/portfolio/yoonken") 尹建
-      form(class="form-inline my-2 my-lg-0")
-        input(class="form-control mr-sm-2", type="search", placeholder="Search", aria-label="Search")
-        button(class="btn btn-outline-success my-2 my-sm-0", type="submit") Search
+    ul(class="navbar-nav mr-auto")
+      li(class="nav-item active")
+        a(class="nav-link", href="/") Home
+      li(class="nav-item")
+        a(class="nav-link" href="https://huitclub.github.io") Github Blog
+      li(class="nav-item")
+        a(class="nav-link" href="/blog") Site Blog
+      li(class="nav-item dropdown")
+        a(class="nav-link dropdown-toggle", href="/portfolio", id="navbarDropdown", role="button", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false") Portfolio
+        div(class="dropdown-menu", aria-labelledby="navbarDropdown")
+          a(class="dropdown-item", href="/portfolio") Portfolio Main
+          div.dropdown-divider
+          a(class="dropdown-item", href="/portfolio/yoonken") 尹建
+  button(class="navbar-toggler", type="button", data-toggle="collapse", data-target="#navbarHeader", aria-controls="navbarHeader", aria-expanded="true", aria-label="Toggle navigation")
+    span.navbar-toggler-icon
