portfolio main page

--- a/server/views/includes/head.pug
+++ b/server/views/includes/head.pug
@@ -1,5 +1,5 @@
 header
-  nav(class="navbar navbar-default navbar-expand-md navbar-dark fixed-top bg-dark")
+  nav(class="navbar navbar-expand-md navbar-dark fixed-top bg-dark")
     a(class="navbar-brand" href="/") HUIT
     ul(class="navbar-nav mr-auto")
       li(class="nav-item active")
