--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -32,7 +32,7 @@ block content
           span(class="sr-only") Next
     .row
       div(class="jumbotron wf-hannari")
-        h1.display-4 北大IT勉強会にようこそ！
+        h1.display-4 北大IT勉強会へようこそ！
         p.lead こおおおんにちは
         hr.my-4
         p ナンチャラカンチャラ
