--- a/server/views/portfolio.pug
+++ b/server/views/portfolio.pug
@@ -1,6 +1,27 @@
 extends layout
 
 block content
-  ol
-    li hey
-    li yey
+  .jumbotron
+    div(class="container wf-nicomoji", style="padding-top: 2.5em;")
+      h1.display-3 メンバーリスト
+      h3 ここはHUITのかいいんになっているひとびとそれぞれのじこしょうかいやぎじゅつスタック、いままでやってきたポートポリオをけいじするところです。
+      p
+        a(class="btn btn-primary btn-lg" href="#" role="button") くわしく »
+  .container
+    .row
+      .col-md-4
+        h2 名前
+        p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+        p
+          a(class="btn btn-secondary" href="#" role="button") 詳細へ »
+      .col-md-4
+        h2 名前
+        p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+        p
+          a(class="btn btn-secondary" href="#" role="button") 詳細へ »
+      .col-md-4
+        h2 名前
+        p Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+        p
+          a(class="btn btn-secondary" href="#" role="button") 詳細へ »
+    hr
