--- a/server/public/stylesheets/style.css
+++ b/server/public/stylesheets/style.css
@@ -1,6 +1,7 @@
 body {
   padding: 0px;
   margin: 0px;
+  padding-top: 3em;
 }
 
 a {
@@ -41,10 +42,6 @@ HEADERS
   color: #fff;
   text-decoration: none;
 }
-.blog-header {
-  line-height: 1;
-  border-bottom: 1px solid #e5e5e5;
-}
 
 /*
 FONTS
@@ -83,7 +80,6 @@ ANIMATIONS
 /*
 UTILS
   */
-.jumbotron { width: 100%; }
 .border-top { border-top: 1px solid #e5e5e5; }
 .border-bottom { border-bottom: 1px solid #e5e5e5; }
 .box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
