--- a/server/views/blog.pug
+++ b/server/views/blog.pug
@@ -10,8 +10,149 @@ block content
           a(class="blog-header-logo text-dark", href="#") Large
 
         div(class="col-4 d-flex justify-content-end align-items-center")
-          a(class="text-muted" href="#")
-            svg xmlns="http://www.w3.org/2000/svg", width="20", height="20", viewBox="0 0 24 24", fill="none", stroke="currentColor", stroke-width="2", stroke-linecap="round", stroke-linejoin="round", class="mx-3")
-              circle(cx="10.5" cy="10.5" r="7.5")
-              line(x1="21" y1="21" x2="15.8" y2="15.8")
           a(class="btn btn-sm btn-outline-secondary", href="#") Sign up
+
+    div(class="nav-scroller py-1 mb-2")
+      nav(class="nav d-flex justify-content-between")
+        a(class="p-2 text-muted", href="#") Article
+        a(class="p-2 text-muted", href="#") Python
+        a(class="p-2 text-muted", href="#") C++
+        a(class="p-2 text-muted", href="#") Project
+        a(class="p-2 text-muted", href="#") Neural Network
+        a(class="p-2 text-muted", href="#") Tensorflow
+        a(class="p-2 text-muted", href="#") Scikit-learn
+        a(class="p-2 text-muted", href="#") Chainer
+        a(class="p-2 text-muted", href="#") Numpy
+        a(class="p-2 text-muted", href="#") Scipy
+        a(class="p-2 text-muted", href="#") Matplot
+        a(class="p-2 text-muted", href="#") Mathematics
+    div(class="jumbotron p-3 p-md-5 text-white rounded bg-dark")
+      div(class="col-md-6 px-0")
+        h1(class="display-4 font-italic") Title of a longer featured blog post
+        p(class="lead my-3") Multiple lines of text that form the lede, informing new readers quickly and efficiently about what's most interesting in this post's contents.
+        p(class="lead mb-0")
+          a(href="#" class="text-white font-weight-bold") Continue reading...
+
+    div(class="row mb-2")
+      .col-md-6
+        div(class="card flex-md-row mb-4 box-shadow h-md-250")
+          div(class="card-body d-flex flex-column align-items-start")
+            strong(class="d-inline-block mb-2 text-primary") World
+            h3.mb-0
+              a(class="text-dark", href="#") Featured post
+            div(class="mb-1 text-muted") Nov 12
+            p(class="card-text mb-auto") This is a wider card with supporting text below as a natural lead-in to additional content.
+            a(href="#") Continue reading
+          img(class="card-img-right flex-auto d-none d-lg-block", data-src="holder.js/200x250?theme=thumb", alt="Thumbnail [200x250]", style="width: 200px; height: 250px;", src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22200%22%20height%3D%22250%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20200%20250%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_163529fb7f8%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A13pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_163529fb7f8%22%3E%3Crect%20width%3D%22200%22%20height%3D%22250%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2258%22%20y%3D%22131%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E", data-holder-rendered="true")
+      .col-md-6
+        div(class="card flex-md-row mb-4 box-shadow h-md-250")
+          div(class="card-body d-flex flex-column align-items-start")
+            strong(class="d-inline-block mb-2 text-primary") World
+            h3.mb-0
+              a(class="text-dark", href="#") Featured post
+            div(class="mb-1 text-muted") Nov 12
+            p(class="card-text mb-auto") This is a wider card with supporting text below as a natural lead-in to additional content.
+            a(href="#") Continue reading
+          img(class="card-img-right flex-auto d-none d-lg-block", data-src="holder.js/200x250?theme=thumb", alt="Thumbnail [200x250]", style="width: 200px; height: 250px;", src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22200%22%20height%3D%22250%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20200%20250%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_163529fb7f8%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A13pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_163529fb7f8%22%3E%3Crect%20width%3D%22200%22%20height%3D%22250%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2258%22%20y%3D%22131%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E", data-holder-rendered="true")
+  main(role="main", class="container")
+    .row
+      div(class="col-md-8 blog-main")
+        h3(class="pb-3 mb-4 font-italic border-bottom") From the Firehose
+        .blog-post
+          h2.blog-post-title Sample blog post
+          p.blog-post-meta
+            | January 1, 2014 by
+            a(href="#") Mark
+          p This blog post shows a few different types of content that's supported and styled with Bootstrap. Basic typography, images, and code are all supported.
+          hr
+          p
+            | Cum sociis natoque penatibus et magnis
+            a(href="#") dis parturient montes
+            | , nascetur ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.
+          blockquote
+            p
+              | Curabitur blandit tempus porttitor.
+              | strong Nullam quis risus eget urna mollis
+              | ornare vel eu leo. Nullam id dolor id nibh ultricies vehicula ut id elit.
+          p
+            | Etiam porta
+            | em sem malesuada magna
+            | mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.
+          h2 Heading
+          p Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.
+          h3 Sub-heading
+          p Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+          pre
+            code Example code block
+          p Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
+          h3 Sub-heading
+          p Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          ul
+            li Praesent commodo cursus magna, vel scelerisque nisl consectetur et.
+            li Donec id elit non mi porta gravida at eget metus.
+            li Nulla vitae elit libero, a pharetra augue.
+          p Donec ullamcorper nulla non metus auctor fringilla. Nulla vitae elit libero, a pharetra augue.
+          ol
+            li Vestibulum id ligula porta felis euismod semper.
+            li Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+            li Maecenas sed diam eget risus varius blandit sit amet non magna.
+          p Cras mattis consectetur purus sit amet fermentum. Sed posuere consectetur est at lobortis.
+        .blog-post
+          h2.blog-post-title Another blog post
+          p.blog-post-meta December 23, 2013 by
+            a(href="#") Jacob
+          p Cum sociis natoque penatibus et magnis
+            a(href="#") dis parturient montes
+            | , nascetur ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.
+          blockquote
+            p
+              | Curabitur blandit tempus porttitor.
+              strong Nullam quis risus eget urna mollis
+              |  ornare vel eu leo. Nullam id dolor id nibh ultricies vehicula ut id elit.
+          p
+            | Etiam porta
+            em sem malesuada magna
+            | mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.
+          p Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.
+        .blog-post
+          h2.blog-post-title New feature
+          p.blog-post-meta December 14, 2013 by
+            a(href="#") Chris
+          p Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+          ul
+            li Praesent commodo cursus magna, vel scelerisque nisl consectetur et.
+            li Donec id elit non mi porta gravida at eget metus.
+            li Nulla vitae elit libero, a pharetra augue.
+          p
+            | Etiam porta
+            em sem malesuada magna
+            | mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.
+          p Donec ullamcorper nulla non metus auctor fringilla. Nulla vitae elit libero, a pharetra augue.
+
+        nav.blog-pagination
+          a(class="btn btn-outline-primary", href="#") Older
+          a(class="btn btn-outline-secondary disabled", href="#") Newer
+
+      aside(class="col-md-4 blog-sidebar")
+        div(class="p-3 mb-3 bg-light rounded")
+          h4.font-italic About
+          p.mb-0
+            | Etiam porta
+            em sem malesuada magna
+            | mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.
+        .p-3
+          h4.font-italic Archives
+          ol(class="list-unstyled mb-0")
+            li
+              a(href="#") May 2018
+            li
+              a(href="#") April 2018
+        .p-3
+          h4.font-italic Elsewhere
+          ol.list-unstyled
+            li
+              a(href="#") GitHub
+            li
+              a(href="#") Twitter
+            li
+              a(href="#") Facebook
