--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -12,39 +12,46 @@ block content
           div(class="carousel-item active")
             img(class="d-block w-100", src="images/sample.JPG", alt="First slide")
             div(class="carousel-caption d-none d-md-block")
-              h5 caption1
-              p and line
+              h5 カプションその１
+              p 説明その３
           div(class="carousel-item")
             img(class="d-block w-100", src="images/sample.JPG", alt="Second slide")
             div(class="carousel-caption d-none d-md-block")
-              h5 caption2
-              p and line
+              h5 カプションその２
+              p 説明その３
           div(class="carousel-item")
             img(class="d-block w-100", src="images/sample.JPG", alt="Third slide")
             div(class="carousel-caption d-none d-md-block")
-              h5 caption3
-              p and line
+              h5 カプションその３
+              p 説明その３
         a(class="carousel-control-prev", href="#carouselExampleIndicators", role="button", data-slide="prev")
           span(class="carousel-control-prev-icon", aria-hidden="true")
           span(class="sr-only") Previous
         a(class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next")
           span(class="carousel-control-next-icon", aria-hidden="true")
           span(class="sr-only") Next
+    .row
+      div(class="jumbotron wf-hannari", style="width:100%;")
+        h1.display-4 ITべんきょうかいへようこそ！
+        p.lead こおおおんにちは
+        hr.my-4
+        p ナンチャラカンチャラ
+        a(class="btn btn-primary btn-lg", href="/", role="button") どこかに移りましょう
   div(class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light")
     div(class="col-md-5 p-lg-5 mx-auto my-5")
-      h1(class="display-4 font-weight-normal") Punny headline
-      p(class="lead font-weight-normal") And an even wittier subheading to boot. Jumpstart your marketing efforts with this example based on Apple's marketing pages.
+      h1(class="display-4 font-weight-normal") へっど
+      p(class="lead font-weight-normal") カンかんチャラ
       a(class="btn btn-outline-secondary", href="#") Coming soon
     div(class="product-device box-shadow d-none d-md-block")
     div(class="product-device product-device-2 box-shadow d-none d-md-block")
   div(class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3")
     div(class="bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden")
       div(class="my-3 py-3")
-        h2.display-5 Another headline
-        p.lead And an even wittier subheading.
+        h2.display-5 またヘッド
+        p.lead 今回はなんちゃら
       div(class="bg-light box-shadow mx-auto", style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;")
     div(class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden")
       div(class="my-3 py-3")
-        h2.display-5 Another headline
-        p.lead And an even wittier subheading.
+        h2.display-5 またまたヘッド
+        p.lead 次回もなんちゃら
       div(class="bg-dark box-shadow mx-auto", style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;")
