--- a/server/views/portfolio.pug
+++ b/server/views/portfolio.pug
@@ -13,7 +13,7 @@ block content
         h2 名前
         p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
         p
-          a(class="btn btn-secondary" href="#" role="button") 詳細へ »
+          a(class="btn btn-secondary" href="/portfolio/ken" role="button") 詳細へ »
       .col-md-4
         h2 名前
         p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
