--- a/server/views/blog.pug
+++ b/server/views/blog.pug
@@ -2,30 +2,8 @@ extends layout
 
 block content
   .container
-    div(class="blog-header py-3")
-      div(class="row flex-nowrap justify-content-between align-items-center")
-        div(class="col-4 pt-1")
-          a(class="text-muted", href="#") Subscribe
-        div(class="col-4 text-center")
-          a(class="blog-header-logo text-dark", href="#") Large
+    include includes/blog-header.pug
 
-        div(class="col-4 d-flex justify-content-end align-items-center")
-          a(class="btn btn-sm btn-outline-secondary", href="#") Sign up
-
-    div(class="nav-scroller py-1 mb-2")
-      nav(class="nav d-flex justify-content-between")
-        a(class="p-2 text-muted", href="#") Article
-        a(class="p-2 text-muted", href="#") Python
-        a(class="p-2 text-muted", href="#") C++
-        a(class="p-2 text-muted", href="#") Project
-        a(class="p-2 text-muted", href="#") Neural Network
-        a(class="p-2 text-muted", href="#") Tensorflow
-        a(class="p-2 text-muted", href="#") Scikit-learn
-        a(class="p-2 text-muted", href="#") Chainer
-        a(class="p-2 text-muted", href="#") Numpy
-        a(class="p-2 text-muted", href="#") Scipy
-        a(class="p-2 text-muted", href="#") Matplot
-        a(class="p-2 text-muted", href="#") Mathematics
     div(class="jumbotron p-3 p-md-5 text-white rounded bg-dark")
       div(class="col-md-6 px-0")
         h1(class="display-4 font-italic") 一番偉そうな記事専門席
@@ -133,26 +111,4 @@ block content
           a(class="btn btn-outline-primary", href="#") Older
           a(class="btn btn-outline-secondary disabled", href="#") Newer
 
-      aside(class="col-md-4 blog-sidebar")
-        div(class="p-3 mb-3 bg-light rounded")
-          h4.font-italic About
-          p.mb-0
-            | Etiam porta
-            em sem malesuada magna
-            | mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.
-        .p-3
-          h4.font-italic Archives
-          ol(class="list-unstyled mb-0")
-            li
-              a(href="#") May 2018
-            li
-              a(href="#") April 2018
-        .p-3
-          h4.font-italic Elsewhere
-          ol.list-unstyled
-            li
-              a(href="#") GitHub
-            li
-              a(href="#") Twitter
-            li
-              a(href="#") Facebook
+      include includes/blog-header.pug
