--- a/server/views/blog.pug
+++ b/server/views/blog.pug
@@ -111,4 +111,4 @@ block content
           a(class="btn btn-outline-primary", href="#") Older
           a(class="btn btn-outline-secondary disabled", href="#") Newer
 
-      include includes/blog-header.pug
+      include includes/blog-sidebar.pug
