--- a/server/views/blog-page.pug
+++ b/server/views/blog-page.pug
@@ -3,91 +3,15 @@ extends layout
 block content
   .container
     include includes/blog-header.pug
-
-    div(class="jumbotron p-3 p-md-5 text-white rounded bg-dark")
-      div(class="col-md-6 px-0")
-        h1(class="display-4 font-italic") 一番偉そうな記事専門席
-        p(class="lead my-3") 説明文
-        p(class="lead mb-0")
-          a(href="#" class="text-white font-weight-bold") Continue reading...
   main(role="main", class="container")
     .row
       div(class="col-md-8 blog-main")
-        h3(class="pb-3 mb-4 font-italic border-bottom") From the Firehose
+        h3(class="pb-3 mb-4 font-italic border-bottom") from category !{data.category}
         .blog-post
-          h2.blog-post-title Sample blog post
+          h2.blog-post-title !{data.title}
           p.blog-post-meta
-            | January 1, 2014 by
-            a(href="#") Mark
-          p This blog post shows a few different types of content that's supported and styled with Bootstrap. Basic typography, images, and code are all supported.
-          hr
-          p
-            | Cum sociis natoque penatibus et magnis
-            a(href="#") dis parturient montes
-            | , nascetur ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.
-          blockquote
-            p
-              | Curabitur blandit tempus porttitor.
-              | strong Nullam quis risus eget urna mollis
-              | ornare vel eu leo. Nullam id dolor id nibh ultricies vehicula ut id elit.
-          p
-            | Etiam porta
-            | em sem malesuada magna
-            | mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.
-          h2 Heading
-          p Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.
-          h3 Sub-heading
-          p Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-          pre
-            code Example code block
-          p Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
-          h3 Sub-heading
-          p Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          ul
-            li Praesent commodo cursus magna, vel scelerisque nisl consectetur et.
-            li Donec id elit non mi porta gravida at eget metus.
-            li Nulla vitae elit libero, a pharetra augue.
-          p Donec ullamcorper nulla non metus auctor fringilla. Nulla vitae elit libero, a pharetra augue.
-          ol
-            li Vestibulum id ligula porta felis euismod semper.
-            li Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-            li Maecenas sed diam eget risus varius blandit sit amet non magna.
-          p Cras mattis consectetur purus sit amet fermentum. Sed posuere consectetur est at lobortis.
-        .blog-post
-          h2.blog-post-title Another blog post
-          p.blog-post-meta December 23, 2013 by
-            a(href="#") Jacob
-          p Cum sociis natoque penatibus et magnis
-            a(href="#") dis parturient montes
-            | , nascetur ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.
-          blockquote
-            p
-              | Curabitur blandit tempus porttitor.
-              strong Nullam quis risus eget urna mollis
-              |  ornare vel eu leo. Nullam id dolor id nibh ultricies vehicula ut id elit.
-          p
-            | Etiam porta
-            em sem malesuada magna
-            | mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.
-          p Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.
-        .blog-post
-          h2.blog-post-title New feature
-          p.blog-post-meta December 14, 2013 by
-            a(href="#") Chris
-          p Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
-          ul
-            li Praesent commodo cursus magna, vel scelerisque nisl consectetur et.
-            li Donec id elit non mi porta gravida at eget metus.
-            li Nulla vitae elit libero, a pharetra augue.
-          p
-            | Etiam porta
-            em sem malesuada magna
-            | mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.
-          p Donec ullamcorper nulla non metus auctor fringilla. Nulla vitae elit libero, a pharetra augue.
-
-        nav.blog-pagination
-          a(class="btn btn-outline-primary", href="#") Older
-          a(class="btn btn-outline-secondary disabled", href="#") Newer
-
+            | !{data.date}
+            | by
+            a(href="#") !{data.author}
+          div !{data.page}
       include includes/blog-sidebar.pug
-      
