sidebar, page contents

--- a/server/views/blog-page.pug
+++ b/server/views/blog-page.pug
@@ -13,5 +13,5 @@ block content
             | !{data.date}
             | by
             a(href="#") !{data.author}
-          div !{data.page}
+          p !{data.page}
       include includes/blog-sidebar.pug
