--- a/server/views/includes/blog-sidebar.pug
+++ b/server/views/includes/blog-sidebar.pug
@@ -2,9 +2,7 @@ aside(class="col-md-4 blog-sidebar")
   div(class="p-3 mb-3 bg-light rounded")
     h4.font-italic About
     p.mb-0
-      | Etiam porta
-      em  sem malesuada magna 
-      | mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.
+      | 著者とか、何でも掲示する場所。
   .p-3
     h4.font-italic Archives
     ol(class="list-unstyled mb-0")
