--- a/server/views/includes/blog-header.pug
+++ b/server/views/includes/blog-header.pug
@@ -1,11 +1,11 @@
 div(class="blog-header py-3")
   div(class="row flex-nowrap justify-content-between align-items-center")
     div(class="col-4 pt-1")
-      a(class="btn btn-sm btn-outline-secondary", href="/blog/signin") Sign in
+      a(class="btn btn-sm btn-outline-secondary", href="/auth/github") Sign in
     div(class="col-4 text-center")
       a(class="blog-header-logo text-dark", href="#") HUIT POST
     div(class="col-4 d-flex justify-content-end align-items-center")
-      a(class="btn btn-sm btn-outline-secondary", href="#") Write Article
+      a(class="btn btn-sm btn-outline-secondary", href="/blog/manage") Write Article
 
 div(class="nav-scroller py-1 mb-2")
   nav(class="nav d-flex justify-content-between")
