--- a/server/views/port-page.pug
+++ b/server/views/port-page.pug
@@ -3,7 +3,7 @@ extends layout
 block content
   div(class="container wf-mplus1p")
     .row
-      svg(viewBox="0 0 1980 300")
+      svg(viewBox="0 0 1980 300", class="name-animation")
         symbol#s-text
           text(text-anchor="middle", x="50%", y="80%") < !{data.name} >
         g.g-ants
