--- a/server/public/stylesheets/dashboard.css
+++ b/server/public/stylesheets/dashboard.css
@@ -1,7 +1,3 @@
-body {
-  font-size: .875rem;
-}
-
 .feather {
   width: 16px;
   height: 16px;
@@ -18,7 +14,7 @@ body {
   bottom: 0;
   left: 0;
   z-index: 100; /* Behind the navbar */
-  padding: 48px 0 0; /* Height of navbar */
+  /*padding: 48px 0 0; /* Height of navbar */
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
 }
 
@@ -67,7 +63,7 @@ body {
  */
 
 [role="main"] {
-  padding-top: 48px; /* Space for fixed navbar */
+  /*padding-top: 48px; /* Space for fixed navbar */
 }
 
 /*
